--- a/asio/src/tests/Makefile.am
+++ b/asio/src/tests/Makefile.am
@@ -203,7 +203,11 @@ check_PROGRAMS += \
 if HAVE_COROUTINES
 check_PROGRAMS += \
 	unit/experimental/awaitable_operators \
-	unit/experimental/co_composed \
+	unit/experimental/co_composed
+endif
+
+if HAVE_EXPERIMENTAL_COROUTINES
+check_PROGRAMS += \
 	unit/experimental/coro/allocator \
 	unit/experimental/coro/cancel \
 	unit/experimental/coro/co_spawn \
@@ -403,7 +407,11 @@ TESTS += \
 if HAVE_COROUTINES
 TESTS += \
 	unit/experimental/awaitable_operators \
-	unit/experimental/co_composed \
+	unit/experimental/co_composed
+endif
+
+if HAVE_EXPERIMENTAL_COROUTINES
+TESTS += \
 	unit/experimental/coro/allocator \
 	unit/experimental/coro/cancel \
 	unit/experimental/coro/co_spawn \
@@ -621,6 +629,9 @@ unit_experimental_promise_SOURCES = unit/experimental/promise.cpp
 if HAVE_COROUTINES
 unit_experimental_awaitable_operators_SOURCES = unit/experimental/awaitable_operators.cpp
 unit_experimental_co_composed_SOURCES = unit/experimental/co_composed.cpp
+endif
+
+if HAVE_EXPERIMENTAL_COROUTINES
 unit_experimental_coro_allocator_SOURCES = unit/experimental/coro/allocator.cpp
 unit_experimental_coro_cancel_SOURCES = unit/experimental/coro/cancel.cpp
 unit_experimental_coro_co_spawn_SOURCES = unit/experimental/coro/co_spawn.cpp
