--- a/src/Makefile.msc
+++ b/src/Makefile.msc
@@ -236,6 +236,7 @@ UNIT_TEST_EXES = \
 	tests\unit\read_until.exe \
 	tests\unit\readable_pipe.exe \
 	tests\unit\recycling_allocator.exe \
+	tests\unit\redirect_disposition.exe \
 	tests\unit\redirect_error.exe \
 	tests\unit\registered_buffer.exe \
 	tests\unit\serial_port.exe \
