Disable deprecated messages when building tests.

--- a/src/Makefile.mgw
+++ b/src/Makefile.mgw
@@ -24,6 +24,7 @@ SEPARATE_COMPILATION_CXXFLAGS = \
 endif
 
 CXXFLAGS = -g -Wall -Wextra -mthreads -I../include \
+	-DASIO_DISABLE_DEPRECATED_MSG \
 	$(OPTIM_CXXFLAGS) \
 	$(BOOST_CXXFLAGS) \
 	$(SEPARATE_COMPILATION_CXXFLAGS)
