--- a/src/Makefile.msc
+++ b/src/Makefile.msc
@@ -2,7 +2,7 @@
 BOOSTDIR = ../../boost_1_34_1
 !endif
 
-COMMON_CXXFLAGS = -nologo -EHac -GR -I. -I../include
+COMMON_CXXFLAGS = -nologo -EHac -GR -I. -I../include -DASIO_DISABLE_DEPRECATED_MSG
 
 !ifdef CXXLATEST
 STD_CXXFLAGS = -std:c++latest -permissive-
